--- a/app/globals.css
+++ b/app/globals.css
@@ -49,6 +49,36 @@ body {
   width: 10rem;
 }
 
+.card-policy {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+  border-radius: 2%;
+  height: 500px;
+  width: 500px;
+}
+
+.card-body {
+  display: flex;
+  display: flex;
+  flex: 1 1 auto;
+  justify-items: center;
+
+  flex-direction: column;
+  padding: var(--padding-card, 2rem /* 32px */);
+  gap: 4rem /* 8px */;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 10px;
+  overflow-x: hidden; /* Add this line */
+}
+
 @media only screen and (max-width: 600px) {
   .min-h-screen-main {
     min-height: 95vh;
