--- a/app/globals.css
+++ b/app/globals.css
@@ -95,7 +95,33 @@ body {
   flex-direction: column;
   flex-direction: column;
   padding: var(--padding-card, 2rem /* 32px */);
-  gap: 0.5rem /* 8px */;
+}
+
+.carousel-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  scroll-snap-align: start;
+}
+
+.carousel {
+  display: inline-flex;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+
+.carousel-center .carousel-item {
+  scroll-snap-align: center;
+}
+.carousel-end .carousel-item {
+  scroll-snap-align: center;
 }
 
 @media only screen and (max-width: 600px) {
