--- a/app/globals.css
+++ b/app/globals.css
@@ -93,8 +93,8 @@ body {
 .card-body {
   display: flex;
   display: flex;
-  align-items: start;
-  align-items: start;
+  align-items: flex-start;
+  align-items: flex-start;
   flex-direction: column;
   flex-direction: column;
   padding: var(--padding-card, 0.5rem /* 32px */);
@@ -103,7 +103,7 @@ body {
 .carousel-item {
   display: flex;
   flex-direction: column;
-  align-items: start;
+
   width: fit-content;
   scroll-snap-align: start;
 }
